feat: Enhance VaR calculation with dynamic confidence levels and metrics; update LSTM training parameters for improved performance; refactor stock symbol loading in the dropdown